gitops/infra/observability/grafana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-dns"
    #external-dns.alpha.kubernetes.io/hostname: "grafana.tetra.konst.fish"
    nginx.ingress.kubernetes.io/auth-signin: https://sson.konst.fish/oauth2/start?rd=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://sson.konst.fish/oauth2/auth
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-Email,X-Auth-Request-Groups,X-Auth-Request-User
spec:
  ingressClassName: nginx-netbird
  rules:
  - host: "grafana.barracuda.net.konst.fish"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
